--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,6 +51,7 @@ body {
     .splash {
         display: flex;
         min-height: 500px;
+        background-image: url("black-and-white-cases-cigarette-238230.jpg")
 
         .splash-inner {
             margin: auto;
