--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,7 +31,6 @@ body {
     left: 0;
     right: 0;
     
-    
     ul {
         list-style-type: none;
         padding: 0;
@@ -46,12 +45,12 @@ body {
                 font-size: 16px;                    
                 }
             }
-
+        }
+    }
     
     .splash {
         display: flex;
         min-height: 500px;
-        background-image: url("black-and-white-cases-cigarette-238230.jpg")
 
         .splash-inner {
             margin: auto;
