--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,35 +32,35 @@ body {
     right: 0;
     
     ul {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
         
         li {
         display: inline-block;
         margin-right: 36px;
         
             a {
-                text-decoration: none;
-                font-size: 16px;                    
-                }
+            text-decoration: none;
+            font-size: 16px;                    
             }
         }
     }
+}
     
-    .splash {
-        display: flex;
-        min-height: 500px;
+.splash {
+    display: flex;
+    min-height: 500px;
 
-        .splash-inner {
-            margin: auto;
-            position: absolute;
-            img {
-                width: 100%;
-                height: 100%;
-            }
+    .splash-inner {
+        margin: auto;
+        position: absolute;
+        img {
+            width: 100%;
+             height: 100%;
         }
     }
+}
 
     .page-subtitle {
         text-transform: uppercase;
@@ -146,15 +146,14 @@ body {
         list-style-type: none;
         display: inline-block;
         
-        i {   
+        a {   
         color: $color-text;
         background-color: $color-two; 
-        font-size: 20px;
+        font-size: 5px;
         border-radius: 50%;
         height: 40px;
         width: 40px; 
-        text-align: center;
-        display: inline-block;
+        line-height: 1.8;
         }
     }
 
