--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,22 @@ body {
 }
 
 .navigation {
-  padding: 12px 0;
+  padding-top: 20px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 
 .navigation ul {
   list-style-type: none;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: end;
-      justify-content: flex-end;
   padding: 0;
   margin: 0;
 }
@@ -32,37 +39,37 @@ body {
 .navigation ul li {
   display: inline-block;
   margin-right: 36px;
+  font-family: "Yeseva One", cursive;
 }
 
 .navigation ul li a {
   text-decoration: none;
   font-size: 16px;
+  color: #fff;
 }
 
-.golden {
+.splash {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: start;
-      justify-content: flex-start;
+  min-height: 600px;
+  background: url("https://i.postimg.cc/15SXxYnP/black-and-white-cases-cigarette-238230.jpg");
+  background-size: cover;
+  color: #fff;
+  text-align: center;
 }
 
 .splash .splash-inner {
   margin: auto;
 }
 
-.splash .splash-inner img {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.page-title .page-subtitle {
-  text-align: center;
-}
-
 .page-subtitle {
   text-transform: uppercase;
-  font-size: 50px;
+  font-size: 70px;
+}
+
+.page-title {
+  font-size: 40px;
+  font-style: italic;
 }
 
 .btn {
@@ -86,10 +93,12 @@ body {
   color: #fff;
   text-transform: uppercase;
   font-size: 20px;
+  border-color: #f6b93b;
 }
 
-.card-body {
-  text-align: center;
+.golden {
+  font-style: italic;
+  color: #f6b93b;
 }
 
 .card i {
@@ -105,13 +114,11 @@ body {
 }
 
 .section-title {
-  text-align: center;
   text-transform: uppercase;
   font-size: 40px;
 }
 
 .section-subtitle {
-  text-align: center;
   font-style: italic;
   font-size: 20px;
   font-weight: lighter;
@@ -134,6 +141,9 @@ body {
   background-color: #f7f1e3;
   padding-top: 60px;
   padding-bottom: 60px;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
 }
 
 .row {
@@ -145,14 +155,19 @@ body {
   display: inline-block;
 }
 
-.list li i {
+.list li a {
   color: #fff;
   background-color: #000;
   font-size: 20px;
   border-radius: 50%;
   height: 40px;
   width: 40px;
-  text-align: justify;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
 }
 
 .page-footer {
@@ -161,6 +176,10 @@ body {
 }
 
 .services {
-  padding-bottom: 100px;
+  padding-bottom: 96px;
+  padding-top: 80px;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
